--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -13,8 +13,9 @@
 }
 
 /* Force text to render as a sans-serif web-safe font. */
-#panels-ipe-tray, #panels-ipe-tray a {
+#panels-ipe-tray, #panels-ipe-tray a, #panels-ipe-tray p {
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 /* Remove list styling from the output of the TabsView. */
@@ -62,11 +63,44 @@
 /* Provide default styles and a minimum height for tab content. */
 .ipe-tab-content {
   display: none;
-  min-height: 150px;
+  min-height: 100px;
+  padding: 25px;
   background-color: white;
   border-top: 1px solid darkgray;
 }
 
 .ipe-tab-content.active {
   display: block;
+}
+
+/* Styles for the Layout selector. */
+.ipe-current-layout, .ipe-all-layouts {
+  display: inline-block;
+  height: 50px;
+}
+
+.ipe-current-layout {
+  margin-right: 50px;
+}
+
+/* Remove <ul> list styling. */
+.ipe-layouts {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+/* Show layouts as clickable things. */
+.ipe-layout {
+  cursor: pointer;
+  display: inline-block;
+}
+
+.ipe-layout-title {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.ipe-layout-title a {
+
 }
