Added edit/save tabs.

--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -104,3 +104,8 @@
 .ipe-layout-title a {
 
 }
+
+/* Hide the tray for the edit and save tabs. */
+[data-tab-content-id="edit"].active, [data-tab-content-id="save"].active {
+  display: none;
+}
