Added default width to tab icons to prevent pop-in.

--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -66,10 +66,7 @@
 
 .ipe-tab img {
   vertical-align: middle;
-}
-
-.ipe-tab img {
-  vertical-align: middle;
+  width: 24px;
 }
 
 /* Provide default styles and a minimum height for tab content. */
