--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -3,6 +3,39 @@
  * Contains all CSS for the Panels In-Place Editor.
  */
 
+/* Define our icon font, which is generated from the SVGs in /images. */
+@font-face {
+  font-family: PanelsIPEIcon;
+  src: url(../fonts/ipeicons.woff);
+}
+
+.ipe-icon {
+  display:inline-block;
+  vertical-align: middle;
+  font-family: PanelsIPEIcon;
+  font-size: 24px;
+}
+
+.ipe-icon.ipe-icon-warning:before {
+  content: "\e902";
+}
+
+.ipe-icon.ipe-icon-change_layout:before {
+  content: "\e903";
+}
+
+.ipe-icon.ipe-icon-manage_content:before {
+  content: "\e905";
+}
+
+.ipe-icon.ipe-icon-edit:before {
+  content: "\e904";
+}
+
+.ipe-icon.ipe-icon-save:before {
+  content: "\e906";
+}
+
 /* Fix the output of the AppView to the bottom of the screen. */
 #panels-ipe-tray {
   position: fixed;
@@ -51,12 +84,13 @@
 
 .ipe-tab a {
   color: black;
-  height: 24px;
+  height: 30px;
   display: block;
   text-transform: uppercase;
   vertical-align: top;
   border: none;
   cursor: pointer;
+  transition: .2s;
 }
 
 .ipe-tab a:hover {
@@ -64,16 +98,11 @@
   border: none;
 }
 
-.ipe-tab img {
-  vertical-align: middle;
-  width: 24px;
-}
-
 /* Provide default styles and a minimum height for tab content. */
 .ipe-tab-content {
   display: none;
   min-height: 100px;
-  padding: 10px 5px 10px 5px;
+  padding: 5px 5px 10px 5px;
   background-color: white;
   border-top: 1px solid darkgray;
 }
@@ -83,10 +112,9 @@
 }
 
 /* Don't show text for these tabs */
-[data-tab-id="save"] a, [data-tab-id="edit"] a {
-  padding: 0;
-  max-width: 24px;
+[data-tab-id="save"], [data-tab-id="edit"] {
   overflow-x: hidden;
+  width: 24px;
 }
 
 /* Styles for the Layout selector. */
