--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -36,6 +36,16 @@
   content: "\e906";
 }
 
+.ipe-icon.ipe-icon-loading:before {
+  content: "\e907";
+  animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  from {transform:rotate(360deg);}
+  to {transform:rotate(0deg);}
+}
+
 /* Fix the output of the AppView to the bottom of the screen. */
 #panels-ipe-tray {
   position: fixed;
