--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -283,3 +283,39 @@ div.ipe-actions {
   background-color: rgba(88, 160, 44, 0.70);
   border-color: rgb(67, 125, 33);
 }
+
+/* Style the BlockPicker. */
+.ipe-block-picker-bottom {
+  overflow-x: scroll;
+  padding: 20px;
+}
+
+.ipe-block-category {
+  color: black;
+  display: inline-block;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 15px;
+  font-weight: bold;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  transition: .2s;
+  cursor: pointer;
+}
+
+.ipe-block-category:hover {
+  border-color: rgb(67, 125, 33);
+  color: inherit;
+}
+
+.ipe-block-category-count {
+  color: white;
+  background: black;
+  border-radius: 50%;
+  font-size: 10px;
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
