--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -16,7 +16,7 @@
   font-size: 24px;
 }
 
-.ipe-icon.ipe-icon-up,.ipe-icon.ipe-icon-down {
+.ipe-action-list .ipe-icon {
   height: 24px;
   margin-top: -10px;
   display: block;
@@ -53,6 +53,10 @@
 .ipe-icon.ipe-icon-loading:before {
   content: "\e907";
   animation: spin 1s infinite linear;
+}
+
+.ipe-icon.ipe-icon-remove:before {
+  content: "\e908";
 }
 
 @keyframes spin {
