Added cancel button and related backend code.

--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -63,6 +63,10 @@
   content: "\e909";
 }
 
+.ipe-icon.ipe-icon-cancel:before {
+  content: "\e90a";
+}
+
 .ipe-icon.ipe-icon-configure {
   font-size: 20px;
 }
@@ -112,6 +116,12 @@
   padding-bottom: 10px;
 }
 
+/* Indicate the cancel button. */
+[data-tab-id="cancel"]:hover, [data-tab-id="cancel"].active {
+  border-bottom: 3px solid #7D0000;
+  padding-bottom: 10px;
+}
+
 .ipe-tab:first-child {
   border-left: 1px solid darkgray;
   border-top-left-radius: 5px;
@@ -138,6 +148,13 @@
   border: none;
 }
 
+
+/* Indicate the cancel button. */
+[data-tab-id="cancel"] a:hover, [data-tab-id="cancel"].active a {
+  color: #7D0000;
+  border: none;
+}
+
 .ipe-tab a::selection {
   background: none;
 }
@@ -156,7 +173,9 @@
 }
 
 /* Don't show text for these tabs */
-[data-tab-id="save"] .ipe-tab-title, [data-tab-id="edit"] .ipe-tab-title {
+[data-tab-id="save"] .ipe-tab-title,
+[data-tab-id="edit"] .ipe-tab-title,
+[data-tab-id="cancel"] .ipe-tab-title {
   display: none;
 }
 
@@ -193,7 +212,9 @@
 }
 
 /* Hide the tray for the edit and save tabs. */
-[data-tab-content-id="edit"].active, [data-tab-content-id="save"].active {
+[data-tab-content-id="edit"].active,
+[data-tab-content-id="save"].active,
+[data-tab-content-id="cancel"].active {
   display: none;
 }
 
