--- a/css/panels_ipe.css
+++ b/css/panels_ipe.css
@@ -101,6 +101,7 @@
 /* Display tabs inline and slightly on top of .ipe-tabs-content. */
 .ipe-tab {
   overflow: hidden;
+  position: relative;
   display: inline-block;
   vertical-align: bottom;
   padding: 10px 5px 12px 5px;
@@ -120,6 +121,16 @@
 [data-tab-id="cancel"]:hover, [data-tab-id="cancel"].active {
   border-bottom: 3px solid #7D0000;
   padding-bottom: 10px;
+}
+
+/* Indicate unsaved changes. */
+#panels-ipe-tray.unsaved [data-tab-id="save"]:after {
+  content: "*";
+  font-size: 20px;
+  color: #7D0000;
+  position: absolute;
+  top: 5px;
+  right: 0;
 }
 
 .ipe-tab:first-child {
